--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -8,6 +8,8 @@ mat-card {
 }
 
 mat-card-title {
+  margin-top: 10px !important;
+  left:50%;
   text-align: center;
   font-family: "Source Code Pro", monospace;
 }
@@ -18,14 +20,17 @@ mat-card-subtitle {
 }
 
 mat-card-content {
+  margin-top: 10px;
   font-family: "Source Code Pro", monospace;
 }
 
 .card-image {
-  position: relative;
+  position: inherit;
   height: 150px;
   width: 150px;
   left:20%;
   background-size: contain;
   border-radius: 50%;
 }
+
+
